--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animejs": "^3.2.1",
+    "axios": "^1.2.2",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.0",
     "emailjs": "^4.0.1",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.18.9",
