--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-native-web": "^0.18.9",
     "react-pose": "^4.0.10",
     "react-pose-text": "^3.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll-wheel-handler": "^2.2.0",
